--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -21,6 +21,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./auditor": "./src/entrypoints/auditor/index.ts",
+    "./alpha/systemMetadata": "./src/entrypoints/systemMetadata/index.ts",
     "./auth": "./src/entrypoints/auth/index.ts",
     "./cache": "./src/entrypoints/cache/index.ts",
     "./database": "./src/entrypoints/database/index.ts",
@@ -48,6 +49,9 @@
     "*": {
       "auditor": [
         "src/entrypoints/auditor/index.ts"
+      ],
+      "alpha/systemMetadata": [
+        "src/entrypoints/systemMetadata/index.ts"
       ],
       "auth": [
         "src/entrypoints/auth/index.ts"
