--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -145,6 +145,7 @@
     "@backstage/plugin-events-node": "workspace:^",
     "@backstage/plugin-permission-node": "workspace:^",
     "@backstage/types": "workspace:^",
+    "@electric-sql/pglite": "^0.2.15",
     "@google-cloud/storage": "^7.0.0",
     "@keyv/memcache": "^2.0.1",
     "@keyv/redis": "^4.0.1",
@@ -222,13 +223,17 @@
   },
   "peerDependencies": {
     "@google-cloud/cloud-sql-connector": "^1.4.0",
-    "better-sqlite3": "^12.0.0"
+    "better-sqlite3": "^12.0.0",
+    "knex-pglite": "^0.11.0"
   },
   "peerDependenciesMeta": {
     "@google-cloud/cloud-sql-connector": {
       "optional": true
     },
     "better-sqlite3": {
+      "optional": true
+    },
+    "knex-pglite": {
       "optional": true
     }
   },
