--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,20 +58,20 @@
     "@backstage/release-manifests": "workspace:^",
     "@backstage/types": "workspace:^",
     "@manypkg/get-packages": "^1.1.3",
-    "@module-federation/enhanced": "^0.9.0",
     "@octokit/graphql": "^5.0.0",
     "@octokit/graphql-schema": "^13.7.0",
     "@octokit/oauth-app": "^4.2.0",
     "@octokit/request": "^8.0.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rollup/plugin-commonjs": "^26.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-yaml": "^4.0.0",
+    "@rspack/core": "^1.4.11",
+    "@rspack/dev-server": "^1.1.4",
+    "@rspack/plugin-react-refresh": "^1.4.3",
     "@spotify/eslint-config-base": "^15.0.0",
     "@spotify/eslint-config-react": "^15.0.0",
     "@spotify/eslint-config-typescript": "^15.0.0",
-    "@sucrase/webpack-loader": "^2.0.0",
     "@swc/core": "^1.3.46",
     "@swc/helpers": "^0.5.0",
     "@swc/jest": "^0.2.22",
@@ -91,7 +91,6 @@
     "css-loader": "^6.5.1",
     "ctrlc-windows": "^2.1.0",
     "esbuild": "^0.25.0",
-    "esbuild-loader": "^4.0.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-formatter-friendly": "^7.0.0",
@@ -120,7 +119,6 @@
     "jest-runtime": "^29.0.2",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.4.2",
     "minimatch": "^9.0.0",
     "node-stdlib-browser": "^1.3.1",
     "npm-packlist": "^5.0.0",
@@ -144,12 +142,9 @@
     "sucrase": "^3.20.2",
     "swc-loader": "^0.2.3",
     "tar": "^6.1.12",
-    "terser-webpack-plugin": "^5.1.3",
     "ts-morph": "^24.0.0",
     "undici": "^7.2.3",
     "util": "^0.12.3",
-    "webpack": "^5.94.0",
-    "webpack-dev-server": "^5.0.0",
     "yaml": "^2.0.0",
     "yargs": "^16.2.0",
     "yml-loader": "^2.1.0",
@@ -174,9 +169,8 @@
     "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@backstage/test-utils": "workspace:^",
     "@backstage/theme": "workspace:^",
-    "@rspack/core": "^1.3.9",
-    "@rspack/dev-server": "^1.1.1",
-    "@rspack/plugin-react-refresh": "^1.4.2",
+    "@module-federation/enhanced": "^0.9.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/cross-spawn": "^6.0.2",
     "@types/ejs": "^3.1.3",
     "@types/express": "^4.17.6",
@@ -194,22 +188,43 @@
     "@types/webpack-sources": "^3.2.3",
     "@types/yarnpkg__lockfile": "^1.1.4",
     "del": "^8.0.0",
+    "esbuild-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "msw": "^1.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "terser-webpack-plugin": "^5.1.3",
+    "webpack": "~5.96.0",
+    "webpack-dev-server": "^5.0.0"
   },
   "peerDependencies": {
-    "@rspack/core": "^1.2.8",
-    "@rspack/dev-server": "^1.0.9",
-    "@rspack/plugin-react-refresh": "^1.0.0"
+    "@module-federation/enhanced": "^0.9.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "esbuild-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^2.4.2",
+    "terser-webpack-plugin": "^5.1.3",
+    "webpack": "~5.96.0",
+    "webpack-dev-server": "^5.0.0"
   },
   "peerDependenciesMeta": {
-    "@rspack/core": {
+    "@module-federation/enhanced": {
       "optional": true
     },
-    "@rspack/dev-server": {
+    "@pmmmwh/react-refresh-webpack-plugin": {
       "optional": true
     },
-    "@rspack/plugin-react-refresh": {
+    "esbuild-loader": {
+      "optional": true
+    },
+    "mini-css-extract-plugin": {
+      "optional": true
+    },
+    "terser-webpack-plugin": {
+      "optional": true
+    },
+    "webpack": {
+      "optional": true
+    },
+    "webpack-dev-server": {
       "optional": true
     }
   },
