--- a/packages/backend-app-api/package.json
+++ b/packages/backend-app-api/package.json
@@ -48,7 +48,8 @@
   "dependencies": {
     "@backstage/backend-plugin-api": "workspace:^",
     "@backstage/config": "workspace:^",
-    "@backstage/errors": "workspace:^"
+    "@backstage/errors": "workspace:^",
+    "express-promise-router": "^4.1.0"
   },
   "devDependencies": {
     "@backstage/backend-defaults": "workspace:^",
