--- a/plugins/catalog-backend-module-history/package.json
+++ b/plugins/catalog-backend-module-history/package.json
@@ -41,6 +41,7 @@
     "@backstage/config": "workspace:^",
     "@backstage/errors": "workspace:^",
     "@backstage/plugin-catalog-node": "workspace:^",
+    "@backstage/plugin-events-node": "workspace:^",
     "@backstage/types": "workspace:^",
     "express": "^4.17.1",
     "knex": "^3.0.0",
@@ -52,6 +53,7 @@
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
     "@backstage/plugin-catalog-backend": "workspace:^",
+    "@backstage/plugin-events-backend": "workspace:^",
     "@backstage/repo-tools": "workspace:^",
     "supertest": "^7.0.0",
     "wait-for-expect": "^3.0.2"
