--- a/plugins/notifications-common/package.json
+++ b/plugins/notifications-common/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@backstage/config": "workspace:^",
+    "@backstage/types": "workspace:^",
     "@material-ui/icons": "^4.9.1"
   },
   "devDependencies": {
