--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -156,7 +156,6 @@
     "@types/express": "^4.17.6",
     "archiver": "^7.0.0",
     "base64-stream": "^1.0.0",
-    "better-sqlite3": "^12.0.0",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
     "cookie": "^0.7.0",
@@ -214,6 +213,7 @@
     "@types/pg-format": "^1.0.5",
     "@types/yauzl": "^2.10.0",
     "aws-sdk-client-mock": "^4.0.0",
+    "better-sqlite3": "^12.0.0",
     "http-errors": "^2.0.0",
     "msw": "^1.0.0",
     "node-mocks-http": "^1.0.0",
@@ -221,10 +221,14 @@
     "wait-for-expect": "^3.0.2"
   },
   "peerDependencies": {
-    "@google-cloud/cloud-sql-connector": "^1.4.0"
+    "@google-cloud/cloud-sql-connector": "^1.4.0",
+    "better-sqlite3": "^12.0.0"
   },
   "peerDependenciesMeta": {
     "@google-cloud/cloud-sql-connector": {
+      "optional": true
+    },
+    "better-sqlite3": {
       "optional": true
     }
   },
