--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@manypkg/get-packages": "^1.1.3",
     "@types/global-agent": "^2.1.3",
     "@useoptic/optic": "^1.0.0",
+    "unzipper": "^0.12.3",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
@@ -133,6 +134,7 @@
     "@types/cacheable-request": "^8.3.6",
     "@types/memjs": "^1.3.3",
     "@types/node": "^20.16.0",
+    "@types/unzipper": "^0.10.11",
     "@types/webpack": "^5.28.0",
     "array-to-table": "^1.0.1",
     "command-exists": "^1.2.9",
