--- a/plugins/scaffolder-backend-module-github/package.json
+++ b/plugins/scaffolder-backend-module-github/package.json
@@ -54,6 +54,7 @@
     "libsodium-wrappers": "^0.7.11",
     "octokit": "^3.0.0",
     "octokit-plugin-create-pull-request": "^5.0.0",
+    "unzipper": "^0.12.3",
     "yaml": "^2.0.0",
     "zod": "^3.22.4"
   },
@@ -62,6 +63,7 @@
     "@backstage/cli": "workspace:^",
     "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@types/libsodium-wrappers": "^0.7.10",
+    "@types/unzipper": "^0",
     "fs-extra": "^11.2.0",
     "jsonschema": "^1.2.6"
   }
