--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -168,6 +168,7 @@
     "fs-extra": "^11.2.0",
     "git-url-parse": "^15.0.0",
     "helmet": "^6.0.0",
+    "infinispan": "^0.12.0",
     "is-glob": "^4.0.3",
     "jose": "^5.0.0",
     "keyv": "^5.2.1",
