--- a/.github/workflows/sync_canon.yml
+++ b/.github/workflows/sync_canon.yml
@@ -1,4 +1,4 @@
-name: Sync Canon Docs
+name: Sync BUI Docs
 on:
   push:
     branches: [master]
@@ -36,7 +36,7 @@ jobs:
       - name: Configure Git
         run: |
           git config --global user.email noreply@backstage.io
-          git config --global user.name 'Github Canon Docs workflow'
+          git config --global user.name 'Github BUI Docs workflow'
 
       - name: Install dependencies
         working-directory: docs-ui
@@ -53,9 +53,9 @@ jobs:
           git rm -rf .
           cp -R ../docs-ui/dist/. .
 
-      - name: Commit to canon-storybook repo
+      - name: Commit to bui-storybook repo
         working-directory: bui-external-docs
         run: |
           git add .
-          git commit -am "Canon Docs build for backstage/backstage@${{ github.sha }}"
+          git commit -am "BUI Docs build for backstage/backstage@${{ github.sha }}"
           git push
