--- a/plugins/scaffolder-common/package.json
+++ b/plugins/scaffolder-common/package.json
@@ -69,6 +69,7 @@
     "@types/json-schema": "^7.0.9",
     "cross-fetch": "^4.0.0",
     "json-schema": "^0.4.0",
+    "luxon": "^3.0.0",
     "uri-template": "^2.0.0",
     "zen-observable": "^0.10.0"
   },
