--- a/plugins/catalog-backend-module-ldap/package.json
+++ b/plugins/catalog-backend-module-ldap/package.json
@@ -45,8 +45,7 @@
     "@backstage/plugin-catalog-common": "workspace:^",
     "@backstage/plugin-catalog-node": "workspace:^",
     "@backstage/types": "workspace:^",
-    "@types/ldapjs": "^2.2.5",
-    "ldapjs": "^2.3.3",
+    "ldapts": "^8.0.6",
     "lodash": "^4.17.21",
     "uuid": "^11.0.0"
   },
