--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,6 +58,7 @@
     "@backstage/release-manifests": "workspace:^",
     "@backstage/types": "workspace:^",
     "@manypkg/get-packages": "^1.1.3",
+    "@module-federation/enhanced": "^0.9.0",
     "@octokit/graphql": "^5.0.0",
     "@octokit/graphql-schema": "^13.7.0",
     "@octokit/oauth-app": "^4.2.0",
@@ -101,9 +102,8 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "eslint-webpack-plugin": "^4.2.0",
+    "eslint-rspack-plugin": "^4.2.1",
     "express": "^4.17.1",
-    "fork-ts-checker-webpack-plugin": "^9.0.0",
     "fs-extra": "^11.2.0",
     "git-url-parse": "^15.0.0",
     "glob": "^7.1.7",
@@ -142,6 +142,7 @@
     "sucrase": "^3.20.2",
     "swc-loader": "^0.2.3",
     "tar": "^6.1.12",
+    "ts-checker-rspack-plugin": "^1.1.5",
     "ts-morph": "^24.0.0",
     "undici": "^7.2.3",
     "util": "^0.12.3",
@@ -169,7 +170,6 @@
     "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@backstage/test-utils": "workspace:^",
     "@backstage/theme": "workspace:^",
-    "@module-federation/enhanced": "^0.9.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/cross-spawn": "^6.0.2",
     "@types/ejs": "^3.1.3",
@@ -189,6 +189,8 @@
     "@types/yarnpkg__lockfile": "^1.1.4",
     "del": "^8.0.0",
     "esbuild-loader": "^4.0.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.0",
     "mini-css-extract-plugin": "^2.4.2",
     "msw": "^1.0.0",
     "nodemon": "^3.0.1",
@@ -200,6 +202,8 @@
     "@module-federation/enhanced": "^0.9.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "esbuild-loader": "^4.0.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.0",
     "mini-css-extract-plugin": "^2.4.2",
     "terser-webpack-plugin": "^5.1.3",
     "webpack": "~5.96.0",
@@ -213,6 +217,12 @@
       "optional": true
     },
     "esbuild-loader": {
+      "optional": true
+    },
+    "eslint-webpack-plugin": {
+      "optional": true
+    },
+    "fork-ts-checker-webpack-plugin": {
       "optional": true
     },
     "mini-css-extract-plugin": {
