--- a/microsite/package.json
+++ b/microsite/package.json
@@ -23,6 +23,7 @@
     "node-polyfill-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@backstage/cli": "^0.33.1",
     "@docusaurus/core": "^3.1.1",
     "@docusaurus/plugin-client-redirects": "^3.1.1",
     "@docusaurus/preset-classic": "^3.1.1",
