split out the permission filter into a dedicated file
Signed-off-by: Fredrik Adelöw <freben@gmail.com>

--- a/plugins/catalog-backend-module-history/package.json
+++ b/plugins/catalog-backend-module-history/package.json
@@ -58,6 +58,7 @@
     "@backstage/cli": "workspace:^",
     "@backstage/plugin-catalog-backend": "workspace:^",
     "@backstage/plugin-events-backend": "workspace:^",
+    "@backstage/plugin-permission-backend": "workspace:^",
     "@backstage/repo-tools": "workspace:^",
     "supertest": "^7.0.0",
     "wait-for-expect": "^3.0.2"
