--- a/plugins/scaffolder-node/package.json
+++ b/plugins/scaffolder-node/package.json
@@ -79,6 +79,7 @@
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
     "@backstage/config": "workspace:^",
+    "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@types/lodash": "^4.14.151"
   }
 }
