--- a/plugins/catalog-graph/package.json
+++ b/plugins/catalog-graph/package.json
@@ -61,6 +61,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "classnames": "^2.3.1",
+    "d3-shape": "^3.0.0",
     "lodash": "^4.17.15",
     "p-limit": "^3.1.0",
     "qs": "^6.9.4",
@@ -76,6 +77,7 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.0.0",
+    "@types/d3-shape": "^3.0.1",
     "@types/react": "^18.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
