--- a/plugins/scaffolder-backend-module-cookiecutter/package.json
+++ b/plugins/scaffolder-backend-module-cookiecutter/package.json
@@ -61,6 +61,7 @@
     "@backstage/cli": "workspace:^",
     "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@types/command-exists": "^1.2.0",
-    "@types/fs-extra": "^11.0.0"
+    "@types/fs-extra": "^11.0.0",
+    "zod": "^3.22.4"
   }
 }
