--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,11 +46,11 @@
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
-    "@storybook/react-webpack5": "^8.6.12",
+    "@storybook/react": "^8.6.12",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "chalk": "^5.4.1",
-    "eslint-plugin-storybook": "^9.1.2",
+    "eslint-plugin-storybook": "^0.12.0",
     "glob": "^11.0.1",
     "globals": "^15.11.0",
     "lightningcss": "^1.29.1",
@@ -58,7 +58,7 @@
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^6.3.0",
-    "storybook": "^9.1.2"
+    "storybook": "^8.6.12"
   },
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18.0.0",
