--- a/.github/workflows/verify_storybook.yml
+++ b/.github/workflows/verify_storybook.yml
@@ -52,13 +52,11 @@ jobs:
         # Only for verification, the BUI one is what we upload to Chromatic
       - run: yarn build-storybook
 
-      - run: yarn --cwd packages/ui build-storybook
-
       - uses: chromaui/action@1cfa065cbdab28f6ca3afaeb3d761383076a35aa # v11
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           # projectToken intentionally shared to allow collaborators to run Chromatic on forks
           # https://www.chromatic.com/docs/custom-ci-provider#run-chromatic-on-external-forks-of-open-source-projects
           projectToken: chpt_dab72dc0f97d55b
-          workingDir: packages/ui
+          workingDir: storybook
           storybookBuildDir: storybook-static
