--- a/.github/workflows/verify_storybook.yml
+++ b/.github/workflows/verify_storybook.yml
@@ -49,6 +49,11 @@ jobs:
         with:
           cache-prefix: ${{ runner.os }}-v${{ matrix.node-version }}
 
+      - name: Clean up storybook conflicting files
+        run: |
+          rm -rf storybook/node_modules
+          rm -f storybook/yarn.lock
+
       - name: Install Storybook dependencies
         run: yarn install --immutable
         working-directory: storybook
