Change output path for Storybook
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/.github/workflows/deploy_microsite.yml
+++ b/.github/workflows/deploy_microsite.yml
@@ -199,7 +199,7 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: storybook
-          path: storybook-static
+          path: dist-storybook
           if-no-files-found: error
           retention-days: 1
 
