--- a/plugins/catalog-backend-module-github/package.json
+++ b/plugins/catalog-backend-module-github/package.json
@@ -74,7 +74,8 @@
     "@backstage/cli": "workspace:^",
     "@types/lodash": "^4.14.151",
     "luxon": "^3.0.0",
-    "msw": "^2.0.0"
+    "msw": "^2.0.0",
+    "type-fest": "^4.41.0"
   },
   "configSchema": "config.d.ts"
 }
