--- a/plugins/catalog-backend-module-history/package.json
+++ b/plugins/catalog-backend-module-history/package.json
@@ -56,6 +56,7 @@
     "@backstage/backend-defaults": "workspace:^",
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
+    "@backstage/config-loader": "workspace:^",
     "@backstage/plugin-catalog-backend": "workspace:^",
     "@backstage/plugin-events-backend": "workspace:^",
     "@backstage/plugin-permission-backend": "workspace:^",
