--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -199,6 +199,7 @@
     "winston-transport": "^4.5.0",
     "yauzl": "^3.0.0",
     "yn": "^4.0.0",
+    "zen-observable": "^0.10.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.20.4"
   },
