--- a/plugins/search-backend-module-explore/package.json
+++ b/plugins/search-backend-module-explore/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.5",
   "description": "A module for the search backend that exports explore modules",
   "backstage": {
+    "moved": "@backstage-community/plugin-search-backend-module-explore",
     "role": "backend-plugin-module",
     "pluginId": "search",
     "pluginPackage": "@backstage/plugin-search-backend"
