Add plugin-user-settings-node package with a backend service for user settings
Signed-off-by: Gustaf Räntilä <g.rantila@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -79,6 +79,7 @@ yarn.lock                                         @backstage/maintainers @backst
 /plugins/user-settings                            @backstage/maintainers @backstage/reviewers @backstage/sda-se-reviewers
 /plugins/user-settings-backend                    @backstage/maintainers @backstage/reviewers @backstage/sda-se-reviewers
 /plugins/user-settings-common                     @backstage/maintainers @backstage/reviewers @backstage/sda-se-reviewers
+/plugins/user-settings-node                       @backstage/maintainers @backstage/reviewers @backstage/sda-se-reviewers
 
 /scripts                                          @backstage/operations-maintainers
 
