--- a/plugins/user-settings-node/package.json
+++ b/plugins/user-settings-node/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@backstage/plugin-user-settings-common",
-  "version": "0.0.1",
-  "description": "Common functionalities for the user-settings plugin",
+  "name": "@backstage/plugin-user-settings-node",
+  "version": "0.1.0",
+  "description": "Node.js library for the user-settings plugin",
   "backstage": {
-    "role": "common-library",
+    "role": "node-library",
     "pluginId": "user-settings",
     "pluginPackages": [
       "@backstage/plugin-user-settings",
@@ -13,20 +13,28 @@
     ]
   },
   "publishConfig": {
-    "access": "public",
-    "main": "dist/index.cjs.js",
-    "module": "dist/index.esm.js",
-    "types": "dist/index.d.ts"
+    "access": "public"
   },
+  "homepage": "https://backstage.io",
   "repository": {
     "type": "git",
     "url": "https://github.com/backstage/backstage",
-    "directory": "plugins/user-settings-common"
+    "directory": "plugins/user-settings-node"
   },
   "license": "Apache-2.0",
-  "sideEffects": false,
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json"
+  },
   "main": "src/index.ts",
   "types": "src/index.ts",
+  "typesVersions": {
+    "*": {
+      "package.json": [
+        "package.json"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -36,7 +44,13 @@
     "lint": "backstage-cli package lint",
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
+    "start": "backstage-cli package start",
     "test": "backstage-cli package test"
+  },
+  "dependencies": {
+    "@backstage/backend-plugin-api": "workspace:^",
+    "@backstage/errors": "workspace:^",
+    "@backstage/types": "workspace:^"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^"
