--- a/plugins/user-settings/package.json
+++ b/plugins/user-settings/package.json
@@ -8,7 +8,8 @@
     "pluginPackages": [
       "@backstage/plugin-user-settings",
       "@backstage/plugin-user-settings-backend",
-      "@backstage/plugin-user-settings-common"
+      "@backstage/plugin-user-settings-common",
+      "@backstage/plugin-user-settings-node"
     ]
   },
   "publishConfig": {
