--- a/packages/yarn-plugin/package.json
+++ b/packages/yarn-plugin/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@backstage/cli-common": "workspace:^",
+    "@backstage/errors": "workspace:^",
     "@backstage/release-manifests": "workspace:^",
     "@yarnpkg/core": "^4.4.1",
     "@yarnpkg/fslib": "^3.1.2",
