Updated the API to be similar to the frontend API (StorageApi), and use a config value for the default namespace
Signed-off-by: Gustaf Räntilä <g.rantila@gmail.com>

--- a/plugins/user-settings/package.json
+++ b/plugins/user-settings/package.json
@@ -117,6 +117,15 @@
             }
           }
         }
+      },
+      "userSettings": {
+        "type": "object",
+        "properties": {
+          "namespace": {
+            "type": "string",
+            "visibility": "frontend"
+          }
+        }
       }
     }
   }
