--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "lint:type-deps": "backstage-repo-tools type-deps",
     "new": "backstage-cli new",
     "prepare": "husky",
-    "prettier:check": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "release": "node scripts/prepare-release.js && changeset version && yarn prettier --write '{packages,plugins}/*/{package.json,CHANGELOG.md}' '.changeset/*.json' && yarn install --no-immutable",
+    "prettier:check": "pprettier --check './**/*.{js,jsx,ts,tsx,mjs,cjs,json,md}' '!**/{node_modules,.git,.cache,dist,dist-types}/**'",
+    "prettier:fix": "pprettier --write './**/*.{js,jsx,ts,tsx,mjs,cjs,json,md}' '!**/{node_modules,.git,.cache,dist,dist-types}/**'",
+    "release": "node scripts/prepare-release.js && changeset version && yarn pprettier --write '{packages,plugins}/*/{package.json,CHANGELOG.md}' '.changeset/*.json' && yarn install --no-immutable",
     "snyk:test": "npx snyk test --yarn-workspaces --strict-out-of-sync=false",
     "snyk:test:package": "yarn snyk:test --include",
     "start": "backstage-cli repo start",
@@ -126,6 +126,7 @@
     "@backstage/eslint-plugin": "workspace:*",
     "@backstage/repo-tools": "workspace:*",
     "@changesets/cli": "^2.14.0",
+    "@mixer/parallel-prettier": "^2.0.3",
     "@octokit/rest": "^19.0.3",
     "@playwright/test": "^1.32.3",
     "@spotify/eslint-plugin": "^15.0.0",
