--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,9 +102,6 @@ jobs:
       - name: type checking and declarations
         run: yarn tsc:full
 
-      - name: prettier
-        run: yarn prettier:check
-
         # We need to generate the API references as well, so that we can verify the doc links
       - name: check api reports and generate API reference
         run: yarn build:api-reports:only --ci --docs
@@ -245,6 +242,9 @@ jobs:
           key: ${{ runner.os }}-v${{ matrix.node-version }}-backstage-cli-${{ github.run_id }}
           restore-keys: |
             ${{ runner.os }}-v${{ matrix.node-version }}-backstage-cli-
+
+      - name: prettier
+        run: yarn prettier:check --cache --cache-location .cache/backstage-cli/.prettier-cache
 
       - name: lint changed packages
         run: yarn backstage-cli repo lint --since origin/master --successCache --successCacheDir .cache/backstage-cli
