--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -143,6 +143,7 @@
     "@backstage/integration-aws-node": "workspace:^",
     "@backstage/plugin-auth-node": "workspace:^",
     "@backstage/plugin-events-node": "workspace:^",
+    "@backstage/plugin-permission-common": "workspace:^",
     "@backstage/plugin-permission-node": "workspace:^",
     "@backstage/types": "workspace:^",
     "@google-cloud/storage": "^7.0.0",
