--- a/plugins/devtools-react/package.json
+++ b/plugins/devtools-react/package.json
@@ -1,37 +1,48 @@
 {
   "name": "@backstage/plugin-devtools-react",
   "version": "0.1.0",
-  "license": "Apache-2.0",
-  "private": true,
   "description": "Web library for the devtools plugin",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "backstage": {
+    "role": "web-library",
+    "pluginId": "devtools",
+    "pluginPackages": [
+      "@backstage/plugin-devtools",
+      "@backstage/plugin-devtools-backend",
+      "@backstage/plugin-devtools-common",
+      "@backstage/plugin-devtools-react"
+    ]
+  },
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
-  "backstage": {
-    "role": "web-library",
-    "pluginId": "devtools"
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/backstage/backstage",
+    "directory": "plugins/devtools-react"
   },
+  "license": "Apache-2.0",
   "sideEffects": false,
+  "main": "src/index.ts",
+  "types": "src/index.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "backstage-cli package start",
     "build": "backstage-cli package build",
-    "lint": "backstage-cli package lint",
-    "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
+    "lint": "backstage-cli package lint",
     "prepack": "backstage-cli package prepack",
-    "postpack": "backstage-cli package postpack"
+    "postpack": "backstage-cli package postpack",
+    "start": "backstage-cli package start",
+    "test": "backstage-cli package test"
   },
   "dependencies": {
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/frontend-plugin-api": "workspace:^",
     "@material-ui/core": "^4.9.13"
-  },
-  "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
@@ -40,7 +51,7 @@
     "@testing-library/react": "^14.0.0",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
-  "files": [
-    "dist"
-  ]
+  "peerDependencies": {
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+  }
 }
