--- a/plugins/devtools-react/package.json
+++ b/plugins/devtools-react/package.json
@@ -47,10 +47,12 @@
     "@backstage/cli": "workspace:^",
     "@backstage/test-utils": "workspace:^",
     "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "@testing-library/react": "^14.0.0"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "@types/react": "^17.0.0 || ^18.0.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-router-dom": "^6.3.0"
   }
 }
