chore: wrap up things in a feature flag
Signed-off-by: benjdlambert <ben@blam.sh>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -209,6 +209,8 @@ scaffolder:
   defaultCommitMessage: 'Initial commit'
 
 auth:
+  experimental:
+    enableDynamicClientRegistration: true
   ### Add auth.keyStore.provider to more granularly control how to store JWK data when running
   # the auth-backend.
   #
