chore: initial plugin fix Signed-off-by: benjdlambert <ben@blam.sh>
Signed-off-by: benjdlambert <ben@blam.sh>

--- a/plugins/auth-node/package.json
+++ b/plugins/auth-node/package.json
@@ -5,6 +5,7 @@
     "role": "node-library",
     "pluginId": "auth",
     "pluginPackages": [
+      "@backstage/plugin-auth",
       "@backstage/plugin-auth-backend",
       "@backstage/plugin-auth-node",
       "@backstage/plugin-auth-react"
