--- a/app-config.yaml
+++ b/app-config.yaml
@@ -209,8 +209,11 @@ scaffolder:
   defaultCommitMessage: 'Initial commit'
 
 auth:
-  experimental:
-    enableDynamicClientRegistration: true
+  experimentalDynamicClientRegistration:
+    enabled: true
+    allowedRedirectUriPatterns:
+      - cursor://*
+
   ### Add auth.keyStore.provider to more granularly control how to store JWK data when running
   # the auth-backend.
   #
