--- a/plugins/auth-backend/package.json
+++ b/plugins/auth-backend/package.json
@@ -60,6 +60,7 @@
     "knex": "^3.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.0.0",
+    "matcher": "^4.0.0",
     "minimatch": "^9.0.0",
     "passport": "^0.7.0",
     "uuid": "^11.0.0"
