--- a/packages/app-next/app-config.yaml
+++ b/packages/app-next/app-config.yaml
@@ -21,6 +21,11 @@ app:
         ownerEntityRefs: [cubic-belugas]
 
   extensions:
+    - entity-card:org/members-list:
+        config:
+          showAggregateMembersToggle: true
+          initialRelationAggregation: aggregated
+    
     # - apis.plugin.graphiql.browse.gitlab: true
     # - graphiql-endpoint:graphiql/gitlab: true
 
