feat(plugins/org): add overwrites to membership and ownership cards
Signed-off-by: secustor <sebastian@poxhofer.at>

--- a/packages/app-next/app-config.yaml
+++ b/packages/app-next/app-config.yaml
@@ -22,6 +22,11 @@ app:
         ownerEntityRefs: [cubic-belugas]
 
   extensions:
+    - entity-card:org/members-list:
+        config:
+          showAggregateMembersToggle: true
+          initialRelationAggregation: aggregated
+    
     # - apis.plugin.graphiql.browse.gitlab: true
     # - graphiql-endpoint:graphiql/gitlab: true
 
