plugins: scaffold bui-themer plugin
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -46,6 +46,7 @@
     "@backstage/integration-react": "workspace:^",
     "@backstage/plugin-api-docs": "workspace:^",
     "@backstage/plugin-auth-react": "workspace:^",
+    "@backstage/plugin-bui-themer": "workspace:^",
     "@backstage/plugin-catalog": "workspace:^",
     "@backstage/plugin-catalog-common": "workspace:^",
     "@backstage/plugin-catalog-graph": "workspace:^",
