bui-themer: trim example components and add NFS support
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/plugins/bui-themer/package.json
+++ b/plugins/bui-themer/package.json
@@ -25,8 +25,10 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/core-compat-api": "workspace:^",
     "@backstage/core-components": "workspace:^",
     "@backstage/core-plugin-api": "workspace:^",
+    "@backstage/frontend-plugin-api": "workspace:^",
     "@backstage/theme": "workspace:^",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
