bui-themer: simplify theme conversion
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/plugins/bui-themer/package.json
+++ b/plugins/bui-themer/package.json
@@ -35,6 +35,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^7.3.2",
+    "@mui/system": "^7.3.2",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
