Fixes TS errors
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
     "sloc": "^0.3.1",
     "sort-package-json": "^2.8.0",
     "typedoc": "^0.28.0",
-    "typescript": "~5.7.0"
+    "typescript": "~5.7.0",
+    "vite": "^7.1.5"
   },
   "packageManager": "yarn@4.8.1",
   "engines": {
