Improve stories types
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "test:all": "NODE_OPTIONS='--no-node-snapshot --experimental-vm-modules' backstage-cli repo test --coverage",
     "test:e2e": "NODE_OPTIONS=--no-node-snapshot playwright test",
     "tsc": "tsc",
-    "tsc:full": "backstage-cli repo clean && tsc --skipLibCheck false --incremental false"
+    "tsc:full": "backstage-cli repo clean && tsc --skipLibCheck false --incremental false",
+    "tsc:stories": "tsc --project tsconfig.stories.json"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
