--- a/storybook/package.json
+++ b/storybook/package.json
@@ -33,7 +33,7 @@
     "msw": "^2.4.9",
     "react-router-dom": "^6.3.0",
     "storybook": "^9.1.5",
-    "typescript": "^5.5.3",
+    "typescript": "~5.7.0",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
   }
