--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "plugins/*/dev",
     "plugins/*/migrations"
   ],
-  "exclude": ["**/*.stories.tsx", "**/*.stories.ts"],
-  "references": [{ "path": "./tsconfig.stories.json" }],
+  "exclude": ["**/*.stories.*"],
   "compilerOptions": {
     "outDir": "dist-types",
     "rootDir": ".",
