Upgrade Storybook to version 9
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/package.json
+++ b/package.json
@@ -129,13 +129,10 @@
     "@octokit/rest": "^19.0.3",
     "@playwright/test": "^1.32.3",
     "@spotify/eslint-plugin": "^15.0.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-storysource": "^8.6.12",
-    "@storybook/addon-themes": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
+    "@storybook/addon-docs": "^9.1.5",
+    "@storybook/addon-links": "^9.1.5",
+    "@storybook/addon-themes": "^9.1.5",
+    "@storybook/react-vite": "^9.1.5",
     "@techdocs/cli": "workspace:*",
     "@types/cacheable-request": "^8.3.6",
     "@types/memjs": "^1.3.3",
@@ -160,7 +157,7 @@
     "shx": "^0.4.0",
     "sloc": "^0.3.1",
     "sort-package-json": "^2.8.0",
-    "storybook": "^8.6.12",
+    "storybook": "^9.1.5",
     "typedoc": "^0.28.0",
     "typescript": "~5.7.0",
     "vite": "^7.1.2"
