--- a/package.json
+++ b/package.json
@@ -134,10 +134,10 @@
     "@octokit/rest": "^19.0.3",
     "@playwright/test": "^1.32.3",
     "@spotify/eslint-plugin": "^15.0.0",
-    "@storybook/addon-docs": "^9.1.5",
-    "@storybook/addon-links": "^9.1.5",
-    "@storybook/addon-themes": "^9.1.5",
-    "@storybook/react-vite": "^9.1.5",
+    "@storybook/addon-docs": "0.0.0-pr-32418-sha-6377e85a",
+    "@storybook/addon-links": "0.0.0-pr-32418-sha-6377e85a",
+    "@storybook/addon-themes": "0.0.0-pr-32418-sha-6377e85a",
+    "@storybook/react-vite": "0.0.0-pr-32418-sha-6377e85a",
     "@techdocs/cli": "workspace:*",
     "@types/cacheable-request": "^8.3.6",
     "@types/memjs": "^1.3.3",
@@ -162,7 +162,7 @@
     "shx": "^0.4.0",
     "sloc": "^0.3.1",
     "sort-package-json": "^2.8.0",
-    "storybook": "^9.1.5",
+    "storybook": "0.0.0-pr-32418-sha-6377e85a",
     "typedoc": "^0.28.0",
     "typescript": "~5.7.0",
     "vite": "^7.1.2"
