--- a/.github/workflows/verify_chromatic.yml
+++ b/.github/workflows/verify_chromatic.yml
@@ -1,9 +1,9 @@
-name: Storybook
+name: Chromatic
 on:
   # NOTE: If you change these you must update verify_storybook-noop.yml as well
   pull_request:
     paths:
-      - '.github/workflows/verify_storybook.yml'
+      - '.github/workflows/verify_chromatic.yml'
       - '.storybook/**'
       - 'packages/ui/src/**'
       - 'packages/config/src/**'
@@ -26,7 +26,7 @@ jobs:
         os: [ubuntu-latest]
         node-version: [20.x]
 
-    name: Storybook
+    name: Chromatic
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.0
@@ -59,5 +59,5 @@ jobs:
           # projectToken intentionally shared to allow collaborators to run Chromatic on forks
           # https://www.chromatic.com/docs/custom-ci-provider#run-chromatic-on-external-forks-of-open-source-projects
           projectToken: chpt_dab72dc0f97d55b
-          storybookBuildDir: dist-storybook-chromatic
+          storybookBuildDir: dist-storybook
           onlyChanged: true
