feat(core-components): Allow HTML rendering in MarkdownContent
Adds an optional 'allowUnsafeHtml' prop to the MarkdownContent component to render raw HTML tags when enabled. Fixes #30989

--- a/packages/core-components/package.json
+++ b/packages/core-components/package.json
@@ -90,6 +90,7 @@
     "react-use": "^17.3.2",
     "react-virtualized-auto-sizer": "^1.0.11",
     "react-window": "^1.8.6",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
     "zen-observable": "^0.10.0",
     "zod": "^3.22.4"
