--- a/plugins/scaffolder-backend-module-github/package.json
+++ b/plugins/scaffolder-backend-module-github/package.json
@@ -50,10 +50,10 @@
     "@backstage/plugin-catalog-node": "workspace:^",
     "@backstage/plugin-scaffolder-node": "workspace:^",
     "@backstage/types": "workspace:^",
+    "@octokit/core": "^5.2.1",
     "@octokit/rest": "^21.1.1",
     "@octokit/webhooks": "^13.6.1",
     "libsodium-wrappers": "^0.7.11",
-    "octokit": "^4.1.2",
     "octokit-plugin-create-pull-request": "^5.0.0",
     "yaml": "^2.0.0",
     "zod": "^3.22.4"
