--- a/packages/cli-node/package.json
+++ b/packages/cli-node/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "build": "backstage-cli package build",
     "clean": "backstage-cli package clean",
-    "lint": "backstage-cli package lint",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
     "test": "backstage-cli package test"
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
-    "@backstage/test-utils": "workspace:^"
+    "@backstage/test-utils": "workspace:^",
+    "@biomejs/biome": "^2.2.4"
   }
 }
