--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "build": "backstage-cli package build",
     "clean": "backstage-cli package clean",
-    "lint": "backstage-cli package lint",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
     "start": "nodemon --",
     "test": "backstage-cli package test"
   },
@@ -170,6 +171,7 @@
     "@backstage/plugin-scaffolder-node-test-utils": "workspace:^",
     "@backstage/test-utils": "workspace:^",
     "@backstage/theme": "workspace:^",
+    "@biomejs/biome": "^2.2.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/cross-spawn": "^6.0.2",
     "@types/ejs": "^3.1.3",
